--- a/index.css
+++ b/index.css
@@ -23,7 +23,7 @@ a {
 
 /* Navigation */
 .navbar {
-    background: linear-gradient(to right, #ff4b2b, #ff416c);
+    background: linear-gradient(to right, #375E97, #ff416c);
     color: #fff;
     padding: 15px 0;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
