--- a/index.css
+++ b/index.css
@@ -23,7 +23,7 @@ a {
 
 /* Navigation */
 .navbar {
-    background: linear-gradient(to right, #375E97, #ff416c);
+    background: linear-gradient(to right, #375E97, #375E99);
     color: #fff;
     padding: 15px 0;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -56,7 +56,7 @@ a {
 }
 
 .navbar ul li a:hover {
-    color: #f1f1f1;
+    color: #FB6542;
 }
 
 /* Hamburger Menu for Mobile */
@@ -78,7 +78,7 @@ a {
 
 /* Hero Section */
 .hero-section {
-    background: linear-gradient(to right, #ff4b2b, #ff416c);
+    background: linear-gradient(to right, #375E97, #375E99);
     color: #fff;
     text-align: center;
     padding: 100px 0;
@@ -90,7 +90,7 @@ a {
 }
 
 .hero-title span {
-    color: #ffe259;
+    color: #FB6542;
 }
 
 .hero-subtitle {
@@ -100,8 +100,8 @@ a {
 
 .hero-btn {
     display: inline-block;
-    background: #ffe259;
-    color: #ff416c;
+    background: #FB6542;
+    color: #FB6542;
     padding: 10px 20px;
     font-weight: bold;
     border-radius: 30px;
@@ -109,7 +109,7 @@ a {
 }
 
 .hero-btn:hover {
-    background: #ff416c;
+    background: #FB6542;
     color: #fff;
 }
 
@@ -119,26 +119,26 @@ section {
 }
 
 .about-section {
-    background: #ffe259;
+    background: #FFBB00;
     color: #26355D;
 }
 
 .projects-section {
-    background: #f1f1f1;
+    background: #FFBB00;
 }
 
 .skills-section {
-    background: #ff416c;
+    background: #FB6542;
     color: #fff;
 }
 
 .experience-section {
-    background: #ffe259;
-    color: #ff416c;
+    background: #FFBB00;
+    color: #FB6542;
 }
 
 .contact-section {
-    background: #ff4b2b;
+    background: #375E97;
     color: #fff;
 }
 
@@ -150,7 +150,7 @@ section {
 }
 
 .skills-list li {
-    background: #ff4b2b;
+    background: #FB6542;
     color: #fff;
     padding: 20px;
     margin: 10px;
@@ -173,7 +173,7 @@ section {
 .contact-section form button {
     width: 100%;
     padding: 15px;
-    background: #ffe259;
+    background: #FB6542;
     color: #ff416c;
     font-size: 1rem;
     border: none;
@@ -183,7 +183,7 @@ section {
 }
 
 .contact-section form button:hover {
-    background: #ff416c;
+    background:#FB6542;
     color: #fff;
 }
 
@@ -202,7 +202,7 @@ section {
         flex-direction: column;
         width: 100%;
         text-align: center;
-        background: linear-gradient(to right, #ff4b2b, #ff416c);
+        background: linear-gradient(to right,#FB6542, #375E97);
         position: absolute;
         top: 60px;
         left: 0;
