--- a/index.css
+++ b/index.css
@@ -121,20 +121,24 @@ section {
 .about-section {
     background: #FFBB00;
     color: #26355D;
+    text-align: justify;
 }
 
 .projects-section {
     background: #FFBB00;
+    text-align: justify;
 }
 
 .skills-section {
     background: #FB6542;
     color: #fff;
+    text-align: justify;
 }
 
 .experience-section {
     background: #FFBB00;
     color: #250001;
+    text-align: justify;
 }
 
 .contact-section {
@@ -154,6 +158,7 @@ section {
     color: #fff;
     padding: 20px;
     margin: 10px;
+    text-align: justify;
     flex-basis: 30%;
     text-align: center;
     border-radius: 10px;
